Fix Whitespace Preservation

--- a/client/src/components/DeidentifiedText.css
+++ b/client/src/components/DeidentifiedText.css
@@ -1,6 +1,7 @@
 .deidentified-text {
   padding: 5px;
   background-color: grey;
+  white-space: pre-wrap;
   min-width: 60%;
   max-width: 500px;
   height: 400px;
